--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "cors": "^2.8.5",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
