--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
-    "node": "^20.19.6"
+    "node": "^20.19.6",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
