--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "node": "^20.19.6",
-    "string-similarity": "^4.0.4"
+    "string-similarity-js": "^2.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
